--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
