--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
