--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -58,6 +59,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "recharts": "^3.0.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
