--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/Uge30Blaa.png",
+      "src": "/Uge30gul-192.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/Uge30Blaa.png",
+      "src": "/Uge30gul-512.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
