--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,13 +20,13 @@
   ],
   "screenshots": [
     {
-      "src": "images/desktop-screenshot.png",
+      "src": "/desktop-screenshot.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "images/mobile-screenshot.png",
+      "src": "/mobile-screenshot.png",
       "sizes": "1080x1920",
       "type": "image/png"
     }
