--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.522.0",
+    "motion": "^12.23.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
