--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "swr": "^2.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "web-push": "^3.6.7",
     "zod": "^3.25.67"
   },
